--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -3,9 +3,54 @@
     top: 0;
     z-index: 300;
     display: none;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
+    // animation: yyy .5s forwards;
+    // opacity: 0;
+    // animation-name: swap;
+    // -webkit-animation-name: swap;
+    // transition: all 1s;
+    // -webkit-animation-duration: 1s;
+    // animation-duration: .3s;
+    // -webkit-animation-fill-mode: both;
+    // animation-fill-mode: both;
+    // perspective: 500px;
+
+// @-webkit-keyframes swap {
+//     0% {
+//     opacity: 0;
+//     transform-origin: 0 100%;
+//     transform: scale(0, 0) translate(-700px, 0px);
+//     }
+//     100% {
+//     opacity: 1;
+//     transform-origin: 100% 100%;
+//     transform: scale(1, 1) translate(0px, 0px);
+//     }
+// }
+// @keyframes swap {
+//     0% {
+//     opacity: 0;
+//     transform-origin: 0 100%;
+//     transform: scale(0, 0) translate(-1000px, -1000px);
+//     }
+//     100% {
+//     opacity: 1;
+//     transform-origin: 100% 100%;
+//     transform: scale(1, 1) translate(0px, 0px);
+//     }
+// }
+
+// @keyframes yyy{
+//     0%{ opacity: 0; transform: scale(.2); transform: translateY(-500px) }
+//     30%{ opacity: 0.3; }
+//     50%{ opacity: 0.5; }
+//     70%{ opacity: .7; }
+//     80%{ opacity: .8; }
+//     90%{ opacity: .9; transform: scale(.8); }
+//     100%{ opacity: 1; transform: scale(1); transform: translateY(0) }
+// }
     .member {    
         display: flex;
         width: 820px;
@@ -16,6 +61,9 @@
         transform: translate(-50%,-50%);
         // overflow: hidden;
         z-index: 3;
+        // animation: yyy 1s forwards;
+        // opacity: 0;
+        // transform: translateX(0);
         a.login_btn-close {
             display: block;
             color: $second-color;
@@ -85,6 +133,9 @@
                 }
                 .login_signup {
                     @include input();
+                }
+                .login-error{
+                    border: 1px solid red;
                 }
             }
             .login-group {
@@ -213,6 +264,9 @@
                 label::before {
                     color: $black-color;
                 }
+                .login-error{
+                    border: 1px solid red;
+                }
             }
             .label-before {
                 background: $second-color;
@@ -236,7 +290,7 @@
             z-index: 2;
         }
         .received-form {
-            width: 410px;
+            width: 820px;
             height: 508px;
             border: 1px solid $main-color;
             background-color: $second-color;
@@ -275,6 +329,9 @@
             display: none;
             z-index: 2;
             background-color: $black-color;
+            .login-error{
+                border: 1px solid red;
+            }
             .h2_forget{
                 text-align: center;
                 margin-top: 100px;
@@ -282,13 +339,20 @@
             ul {
                 @include flex-box-between(230px);
                 margin: 30px auto 0;
+                // .login-error{
+                //     border: 1px solid red;
+                // }
                 li {
                     margin-bottom: 20px;
-                    #changeemail {
+                    
+                    .changeemail {
                         @include input();
                         width: 200px;
                         height: 36px;
                         margin-bottom: 0px;
+                    }
+                    .login-error{
+                        border: 1px solid red;
                     }
                 }
             }
@@ -353,6 +417,17 @@
         // .js-none {
         //     display: none;
         // }
+    
+        // @keyframes yyyy{
+        // 0%{ opacity: 0; transform: translateY(-600px); }
+        // 30%{ opacity: 0.3; }
+        // 50%{ opacity: 0.5; }
+        // 70%{ opacity: .7; }
+        // 80%{ opacity: .8; }
+        // 90%{ opacity: .9; }
+        // 95%{ opacity: .9; }
+        // 100%{ opacity: 1; transform: translateY(0px); }
+        // }
     }
 }
 
@@ -395,9 +470,7 @@
     display: none;
 }
 
-// .login-error{
-//     border: 1px solid red;
-// }
+
 
 @include pad(880px) {
     // .login{
@@ -474,6 +547,9 @@
                     label::before {
                         left: 60px;
                     }
+                    .login-error{
+                        border: 1px solid red;
+                    }
                 }
             }
             .form-forget-password{
@@ -498,6 +574,9 @@
                 }
                 .field{
                     // @include font(16px, 700, center, 1.6);
+                    .login-error{
+                        border: 1px solid red;
+                    }
                 }
                 .btn_group2{
                     display: flex;
@@ -527,6 +606,9 @@
                 .field{
                     label::before {
                         left: 60px;
+                    }
+                    .login-error{
+                        border: 1px solid red;
                     }
                 }
                 .login-group{
